Updated the categories

--- a/style.css
+++ b/style.css
@@ -74,6 +74,14 @@ body {
   color: #fff;
   padding: 10px;
   border-radius: 20px;
+  cursor: pointer;
+  border: 1px solid #a435f0;
+}
+.categories p:hover{
+  transition: 1s;
+  background-color: transparent;
+  color: #000;
+  border: 1px solid #a435f0;
 }
 .sale-img {
   position: relative;
@@ -89,6 +97,20 @@ body {
   padding:2%;
   top: 10%;
   left: 10%;
+  animation-name: zoom;
+  animation-duration: 2s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+@keyframes zoom{
+  0% {
+    transform: scale(0);
+    opacity: 0;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
 }
 .recommended {
   padding: 10px;
