--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ body {
   gap: 10px;
   align-items: center;
 }
+.navbar__s4{
+  display: none;
+}
 /* my learning popup */
 .mylearning{
   position: relative;
@@ -122,10 +125,16 @@ body {
   flex-wrap: wrap;
 }
 .course-card {
+  /* 
+
+ 
+  margin-top: 10px; */
   width: 200px;
+  flex-grow: 1;
+  flex-basis: 20%;
+  margin: 10px;
   border: 1px solid gray;
   border-radius: 10px;
-  margin-top: 10px;
 }
 .course-card img {
   width: 100%;
@@ -174,4 +183,25 @@ body {
   justify-content: space-between;
   margin: 20px;
   align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  body{
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .course-card{
+    flex-basis: 40%;
+  }
+  .categories{
+    display: none;
+  }
+  .navbar__s2, .navbar__s3{
+    display: none;
+  }
+  .navbar__s4{
+    display: block;
+  }
 }
